--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,146 @@
 .App {
   text-align: center;
+  overflow-x: hidden;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.App h2{
+  margin-top: 20px;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 50px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-left: 30%;
+  color: #2c3e50;
+  float: left;
+}
+.w-image{
+  height: 100px;
+  width: 100px;
+  margin-right: 30%;
+  background-color: blueviolet;
+
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+
+ /* `xxl` applies to x-large devices (large desktops, less than 1400px) */
+ @media (max-width: 1399.98px) { 
+  .w-image{
+    border-radius: 50%;
   }
-  to {
-    transform: rotate(360deg);
   }
-}
+
+ /* `xl` applies to large devices (desktops, less than 1200px) */
+ @media (max-width: 1199.98px) {  
+  .App h2{
+    margin-top: 50px;
+    font-size: 70px;
+    margin-left: 8%;
+  }
+  .w-image{
+    margin-top: 9px;
+    height: 150px;
+    width: 150px;
+    margin-right: 0%;
+    border-radius: 50%;
+  }
+ }
+
+ /* `lg` applies to medium devices (tablets, less than 992px) */
+ @media (max-width: 991.98px) { 
+  .App h2{
+    margin-top: 50px;
+    font-size: 70px;
+    margin-left: 8%;
+  }
+  .w-image{
+    margin-top: 9px;
+    height: 150px;
+    width: 150px;
+    margin-right: 0%;
+    border-radius: 50%;
+  }
+  }
+
+ /* `md` applies to small devices (landscape phones, less than 768px) */
+ @media (max-width: 767.98px) { 
+  .App h2{
+    margin-top: 20px;
+    font-size: 60px;
+    margin-left: 8%;
+  }
+  .w-image{
+    margin-top: 9px;
+    height: 100px;
+    width: 100px;
+    margin-right: 0%;
+    border-radius: 50%;
+  }
+  }
+
+ /* `sm` applies to x-small devices (portrait phones, less than 576px) */
+ @media (max-width: 575.98px) { 
+
+  .App h2{
+    margin-top: 20px;
+    font-size: 34px;
+    margin-left: 8%;
+  }
+  .w-image{
+    margin-top: 9px;
+    height: 60px;
+    width: 60px;
+    margin-right: 0%;
+    border-radius: 50%;
+  }
+
+  }
+
+/* Mobile-L device*/
+ @media (max-width: 425.98px) { 
+  .App h2{
+    margin-top: 20px;
+    font-size: 34px;
+    margin-left: 8%;
+
+  }
+  .w-image{
+    margin-top: 9px;
+    height: 60px;
+    width: 60px;
+    margin-right: 0%;
+    border-radius: 50%;
+  }
+  }
+
+/* Mobile-M device*/
+ @media (max-width: 375.98px) { 
+  .App h2{
+    margin-top: 20px;
+    font-size: 30px;
+    margin-left: 6%;
+
+  }
+  .w-image{
+    margin-top: 9px;
+    height: 50px;
+    width: 50px;
+    margin-right: 0%;
+  }
+  }
+
+/* Mobile-S device*/
+ @media (max-width: 320.98px) { 
+
+  .App h2{
+    margin-top: 20px;
+    font-size: 25px;
+    margin-left: 6%;
+
+  }
+  .w-image{
+    margin-top: 9px;
+    height: 50px;
+    width: 50px;
+    margin-right: 0%;
+  }
+
+  }
