--- a/src/App.css
+++ b/src/App.css
@@ -60,6 +60,22 @@
   }
   }
 
+  /* Samsung Landscpate 820.98 */
+ @media (max-width: 820.98px) { 
+  .App h2{
+    margin-top: 40px;
+    font-size: 40px;
+    margin-left: 20%;
+  }
+  .w-image{
+    margin-top: 15px;
+    height: 100px;
+    width: 100px;
+    margin-right: 10%;
+    border-radius: 50%;
+  }
+  }
+
  /* `md` applies to small devices (landscape phones, less than 768px) */
  @media (max-width: 767.98px) { 
   .App h2{
