--- a/src/css/realTimeWeather.css
+++ b/src/css/realTimeWeather.css
@@ -1,10 +1,36 @@
 .card{
     width: 38rem;
    margin-left: 25rem;
+   position: relative;
 }
 
 .form-control{
     width: 20%;
+}
+.card-img-top{
+    height: 50px;
+    width: 50px;
+    margin-left: 20rem;
+    margin-top: 2%;
+}
+
+.temp_c{
+    position: absolute;
+    margin-top: 1%;
+    margin-left: 50%;
+    font-size: 40px;
+}
+
+.myinput{
+    padding: 12px;
+    border: 2px solid pink;
+    border-radius: 12px;
+    color: red;
+    font-weight: bold;
+}
+.myinput:focus{
+    outline: none;
+   
 }
 
 
